--- a/travelOntheMap/public/stylesheets/tooplate-style.css
+++ b/travelOntheMap/public/stylesheets/tooplate-style.css
@@ -449,9 +449,9 @@ footer .dash-line {
   padding-left: 0px;
  }
 
- #work .work-thumb {
+ /* #work .work-thumb {
   margin-top: 25px;
- }
+ } */
 
 }
 
