--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -21,8 +21,14 @@
 8/02.광고 recomanded 콜렉션 추가<br>
 8/03.랜딩페이기 추천 여행지 DB연결<br>
 8/03.나의 여행지 페이지 수정완료<br>
-8/03.<br>
-8/03.<br>
+8/04.버튼 추가, 가운데 정렬<br>
+8/04.리액트 네이티브 웹앱 제작 시작<br>
+8/05.자세히 보기 수정<br>
+8/05.db에 태그123 추가<br>
+8/05.여행지 제보기능 추가<br>
+
+
+
 
 
 
