--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -55,6 +55,8 @@
           <nav>
                <a href="https://itjusttravel.herokuapp.com/columbus">지금, 떠나기🚀</a>
                <a href="https://itjusttravel.herokuapp.com/mylist">나의, 여행지🙈</a>
+               <a href="https://forms.gle/2poSfTFw2fu5du6x8">여행지 제보👍🏻</a>
+
                <div id="indicator"></div>
           </nav>
 </div>
@@ -202,14 +204,16 @@
                
                content = content +      
                     `
-                    <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">               
-                         <div class="work-thumb">
-                              <a href="${target.moreLink}" class="image-popup">
-                                   <img src="${target.picLink}" class="img-responsive" alt="Fine Arts">
-                              </a>
+                    <div class="wow fadeInUp col-md-3 col-sm-6 " data-wow-delay="0.1s">               
+                         <div class="work-thumb" style="border-bottom: 1px solid cadetblue; text-align: center; ">
+                              <div>
+                                   <a href="${target.moreLink}" class="image-popup">
+                                        <img src="${target.picLink}" class="img-responsive" alt="Fine Arts" style = "margin: 0 auto;">
+                                   </a>
+                              </div>
+                              <a href="${target.moreLink}" class = "recomandedSpotBox"><span style="color:white;">${target.spot}</span>🚀</a>
+                              <div style="margin: 10px;">${target.des}</div>
                          </div>
-                         
-                         <a href="${target.moreLink}" style="background-color: cadetblue; color: beige; font-size:18px; padding : 3px; border-radius:5px; width:100%">지금, <span style="color:white;">${target.spot}</span>로 떠나기 🚀🚀</a>
                     </div>
                     `       
           }
