--- a/travelOntheMap/views/app_columbus.ejs
+++ b/travelOntheMap/views/app_columbus.ejs
@@ -48,8 +48,8 @@
     <div id="indicator"></div>
   </nav>
   <script>
-    var urlAdd = "http://localhost:3000/"  
-    // var urlAdd = "https://itjusttravel.herokuapp.com/"
+    // var urlAdd = "http://localhost:3000/"  
+    var urlAdd = "https://itjusttravel.herokuapp.com/"
 
 
   var mapOptions = {
