--- a/travelOntheMap/views/app_mylist.ejs
+++ b/travelOntheMap/views/app_mylist.ejs
@@ -40,7 +40,7 @@
 <!-- HOME SECTION -->
 
      <nav>
-          <a href="https://itjusttravel.herokuapp.com/columbus">콜럼버스 맵🚀</a>
+          <a href="https://itjusttravel.herokuapp.com/appcolumbus">콜럼버스 맵🚀</a>
           <a href="https://forms.gle/2poSfTFw2fu5du6x8">여행지 제보👍🏻</a>
           <div id="indicator"></div>
      </nav>
