--- a/travelOntheMap/views/app_columbus.ejs
+++ b/travelOntheMap/views/app_columbus.ejs
@@ -43,7 +43,7 @@
   <div id="map" style="width:100%;height:100vh;"></div>
   <!-- <script type="text/javascript" src="/data/data.js"></script> -->
   <nav>
-    <a href="https://itjusttravel.herokuapp.com/app/mylist"><span>나의, 여행지<br>🚀</span></a>
+    <a href="https://itjusttravel.herokuapp.com/appmylist"><span>나의, 여행지<br>🚀</span></a>
     <a><span class="current">나의 위치로<br>🙈</span></a>
     <div id="indicator"></div>
   </nav>
