--- a/travelOntheMap/public/stylesheets/style.css
+++ b/travelOntheMap/public/stylesheets/style.css
@@ -165,7 +165,25 @@ body {
   cursor: pointer;
   box-shadow: 0 0 0 rgb(255,0,0);
   animation: pulse 0.7s infinite;
+}
 
+#search {
+  position : absolute;
+  top : 20px;
+  /* left : 140px; */
+  padding : 15px;
+  z-index: 10000;
+  background-color: white;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#search_input {
+  border : none;
+}
+
+#search_input:focus {
+ outline : none;
 }
  
 @keyframes pulse{
